type: feat - finished network deployment in infrastructure/network.yaml - finished cluster deployment in infrastructure/cluster.yaml - finished worker deployment in infrastructure/cluster.yaml

--- a/infrastructure/network.yaml
+++ b/infrastructure/network.yaml
@@ -199,6 +199,12 @@ Resources:
             RouteTableId: !Ref PrivateRouteTable2
             SubnetId: !Ref PrivateSubnet2
 
+    ControlPlaneSecurityGroup:
+        Type: AWS::EC2::SecurityGroup
+        Properties:
+            GroupDescription: Cluster communication with worker nodes
+            VpcId: !Ref VPC
+
 Outputs: 
 
     VPC: 
@@ -260,3 +266,9 @@ Outputs:
         Value: !Ref PrivateSubnet2
         Export:
           Name: !Sub ${EnvironmentName}-PRI2-SN
+
+    SecurityGroups:
+        Description: Security group for the cluster communication with worker nodes
+        Value: !Ref ControlPlaneSecurityGroup
+        Export: 
+          Name: !Sub ${EnvironmentName}-SG
